--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -7,6 +12,8 @@
   color:black;
 }
 
+
+
 body{display: flex;
   justify-content: center;
   align-items: center;
@@ -14,27 +21,30 @@ body{display: flex;
   height: 100vh;
 }
 
-.app{
-  height: 500px;
-  width: 500px;
-  background-color: aliceblue;
-}
 
-.box{
+
+.App{
+  padding: 30px;
   height: 350px;
-  width: 350px;
+  width: 450px;
   background-color: aliceblue;
   box-shadow: 14px 14px 26px 0px black;
   border-radius: 25px;
-
+  position: relative;
 }
 
+
+
 .but{
+  bottom: 10px;
+  right: 0;
+  position: absolute;
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   padding-right: 20px;
-  text-decoration: none;
+  margin-top: 0;
+  
   
 }
 
@@ -43,7 +53,7 @@ body{display: flex;
   align-content: center;
   align-items: center;
   padding: 7px;
-  
+  gap: 10px;
 }
 
 .div i{
@@ -54,8 +64,8 @@ button{
   padding: 7px;
   font-size: 1rem;
   border-radius: 50px;
-  position: absolute;
-  align-items: flex-start;
+  
+  
   
 }
 
